--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,8 +2,9 @@
   <h1>My Awesome Reading List</h1>
   <table class="table table-bordered">
     <tr>
-      <th scope="col" [routerLink]="['/book-list']">Danh sách đọc</th>
-      <th scope="col" [routerLink]="['/unreadbook-list']">Danh sách đã đọc</th>
+      <th scope="col" class="btn btn-primary mt-3" [routerLink]="['/book-list']">Danh sách đọc</th>
+      <th scope="col" class="btn btn-danger mt-3" [routerLink]="['/unreadbook-list']">Danh sách đã đọc</th>
     </tr>
   </table>
 </div>
+
