--- a/src/app/unreadbook-list/unreadbook-list.component.html
+++ b/src/app/unreadbook-list/unreadbook-list.component.html
@@ -14,5 +14,5 @@
     </tr>
     </tbody>
   </table>
-  <a [routerLink]="['/book-list']">Danh sách đọc</a>
+  <a class="btn btn-primary btn-sm" [routerLink]="['/book-list']">Danh sách đọc</a>
 </div>
